BUGFIX. Missing `scrollbar` in `Safari` and `Firefox`
Error:
- The `scrollbar` was not being displayed in `Safari` or `Firefox` due to a lack of `cross-browser` compatibility.

Solution:
- CSS vendor-prefixed styles have been added to apply experimental or non-standardized features to CSS properties, with specific identifiers for each browser.
- Refactored the code by creating a new mixin called `scrollbar` to address the cross-browser compatibility issue.

--- a/src/sass/pages/_pages-calendar-1.sass
+++ b/src/sass/pages/_pages-calendar-1.sass
@@ -25,20 +25,7 @@
 		&__inner
 			display: flex
 			align-items: center
-			overflow-y: hidden
-			overflow-x: scroll
-
-			&::-webkit-scrollbar
-				width: 1rem
-				border-radius: 1rem
-
-			&::-webkit-scrollbar-track
-				-webkit-box-shadow: inset 0 0 0.6rem rgba($color-black,0.3)
-				border-radius: 1rem
-
-			&::-webkit-scrollbar-thumb
-				background-color: $color-metal
-				border-radius: 1rem
+			@include scrollbar('x')
 
 		&__month
 			&:not(:last-child)
